Create a new background-color variable

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -10,5 +10,7 @@ $primary-color: #4c92bd;
 $primary-dark-color: #1d3461;
 $inactive-color: #e7ecef;
 
+
 /* Whole project font */
 $project-font: Roboto, Helvetica, Arial, sans-serif;
+$background-section: #E5E5E5;
