--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -9,6 +9,9 @@ $accent-color: #f59f00;
 $primary-color: #4c92bd;
 $primary-dark-color: #1d3461;
 $inactive-color: #e7ecef;
+$inactive-text: #D5D5D6;
+$color-date: rgba(0, 0, 0, 0.56);
+$background-ticket: #FFFFFF;
 
 
 /* Whole project font */
