Create a new variable background text

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -11,7 +11,7 @@ $primary-dark-color: #1d3461;
 $inactive-color: #e7ecef;
 $inactive-text: #D5D5D6;
 $color-date: rgba(0, 0, 0, 0.56);
-$background-ticket: #FFFFFF;
+$background-ticket: #ffffff;
 
 
 /* Whole project font */
