--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -9,6 +9,6 @@ $accent-color: #f59f00;
 $primary-color: #4c92bd;
 $primary-dark-color: #1d3461;
 $inactive-color: #e7ecef;
-
+$white-color: #FFFFFF;
 /* Whole project font */
 $project-font: Roboto, Helvetica, Arial, sans-serif;
