Adding the common black present in Figma

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -10,5 +10,7 @@ $primary-color: #4c92bd;
 $primary-dark-color: #1d3461;
 $inactive-color: #e7ecef;
 
+$dark-color: rgba(0,0,0,0.8);
+
 /* Whole project font */
 $project-font: Roboto, Helvetica, Arial, sans-serif;
