--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -9,13 +9,10 @@ $accent-color: #f59f00;
 $primary-color: #4c92bd;
 $primary-dark-color: #1d3461;
 $inactive-color: #e7ecef;
-$inactive-text: #D5D5D6;
-$color-date: rgba(0, 0, 0, 0.56);
-$background-ticket: #ffffff;
+$inactive-text: #d5d5d6;
 
 
 $dark-color: rgba(0,0,0,0.8);
 
 /* Whole project font */
 $project-font: Roboto, Helvetica, Arial, sans-serif;
-$background-section: #E5E5E5;
