--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -10,7 +10,7 @@ $primary-color: #4c92bd;
 $primary-dark-color: #1d3461;
 $inactive-color: #e7ecef;
 $inactive-text: #d5d5d6;
-
+$white-color: #ffffff;
 
 $dark-color: rgba(0,0,0,0.8);
 
