Refactoring the mixin in banner to be general

--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -1,3 +1,5 @@
+@use "sass:meta";
+
 /**
   Set styles for a "section". Setting the background and the
  */
@@ -13,5 +15,11 @@
   }
   .text {
     color: $texts-color;
+  }
+}
+
+@mixin with-margins($positions...) {
+  @each $position, $value in meta.keywords($positions) {
+    margin-#{$position}: $value;
   }
 }
