Fixing names and removing unused values

--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -17,3 +17,10 @@
     color: $texts-color;
   }
 }
+
+
+@mixin media-screen-max-width($value-max-width: 768px) {
+  @media only screen and (max-width: $value-max-width) {
+    @content;
+  }
+}
