Feature/footer web (#101)
* Changes the model for ButtonInfo

* Resolving problem lint, functionality footer test

* Resolving problems lint

* Resolving lint problems

* Resolving lint problems

* Update styles

* Resolving lint problems

* Adding social media component, add props in test, update styles for join

* Resolved lint problems

* Resolving lint problems

* Responsive styles with bug because the logo and sociallink the position is no correct

* Update styles , traslate logo and Social Links

* Adding mock in test, adding text fot footer in locates files, trying styles use mock data

* Adding NavigationBarItem in Footer, create FooterItem type, implement vue i18n in menu footer

* Resolving lint problems only

* Updates styles for scroll problem, back de changes in en.json (months)

* Update styles for the newsletter padding

* Resolving lint problems

* Implement mixin for display values

* Deleted mock data for i18n , adding social in locates

* Change de class name social in footer and locates , change class footer-item in footer

* Update format , align text spam

* Add Footer to the App

Co-authored-by: unknown <eugynias>
Co-authored-by: Yaidi García <56900133+Yaidi@users.noreply.github.com>
Co-authored-by: Hector Eryx Paredes Camacho <heryxpc@gmail.com>

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -10,6 +10,7 @@ $primary-color: #4c92bd;
 $primary-dark-color: #1d3461;
 $light-color: #e7ecef;
 $inactive-text: #d5d5d6;
+$white-color: #ffffff;
 
 $dark-color: #333333;
 
