--- a/src/styles/jconf.scss
+++ b/src/styles/jconf.scss
@@ -5,7 +5,9 @@
   padding: 0;
 }
 
-body {
+html, body {
   font-family: $project-font;
   background: $light-color;
+  min-height: 100%;
+  height: 100%;
 }
