--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -11,7 +11,7 @@ $primary-dark-color: #1d3461;
 $light-color: #e7ecef;
 $inactive-text: #d5d5d6;
 $white-color: #ffffff;
-
+$backgorund-banner-color: rgb(22 24 29 / 60%);
 $dark-color: #333333;
 
 /* Whole project font */
