Fixing navigation to back home
Fixes #181

--- a/src/styles/jconf.scss
+++ b/src/styles/jconf.scss
@@ -5,6 +5,10 @@
   padding: 0;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 html, body {
   font-family: $project-font;
   background: $light-color;
